Updated APIs (#29)
